--- a/config/moses_ted_3g.ini
+++ b/config/moses_ted_3g.ini
@@ -1,8 +1,4 @@
-# MERT optimized configuration
-# decoder /opt/mt/moses-smt/moses-2013-02-14/bin/moses
-# BLEU 0.243087 on dev /lium/trad6/hazem/amir/tacl/en-fr/data/dev.en-fr.tokmos/wmt_dev_12_13.en
-# We were before running iteration 8
-# finished Mon Dec 15 17:24:04 CET 2014
+#########################
 ### MOSES CONFIG FILE ###
 #########################
 
@@ -19,65 +15,52 @@
 # OLD FORMAT translation tables: source-factors, target-factors, number of scores, file 
 # OLD FORMAT a binary table type (1) is assumed 
 [ttable-file]
-0 0 0 5 Tools/model_news-commentary/phrase-table.gz
+0 0 0 5 Model/phrase-table.gz
 
 # no generation models, no generation-file section
 
 # language models: type(srilm/irstlm), factors, order, file
 [lmodel-file]
-0 0 3 Tools/model_news-commentary/news-commentary.lm
+0 0 3 Model/ted.lm
 
 
 # limit on how many phrase translations e for each phrase f are loaded
 # 0 = all elements loaded
 [ttable-limit]
-50
-
+20
 
 # distortion (reordering) files
 [distortion-file]
-0-0 wbe-msd-bidirectional-fe-allff 6 Tools/model_news-commentary/reordering-table.wbe-msd-bidirectional-fe.gz
+0-0 wbe-msd-bidirectional-fe-allff 6 Model/reordering-table.wbe-msd-bidirectional-fe.gz
 
 # distortion (reordering) weight
 [weight-d]
-0.0834937
-0.0978323
-0.0638245
-0.033802
-0.095953
-0.0033798
-0.0865254
+0.3
+0.3
+0.3
+0.3
+0.3
+0.3
+0.3
 
 # language model weights
 [weight-l]
-0.107194
+0.5000
 
 
 # translation model weights
 [weight-t]
-0.0798376
-0.0524442
-0.0176381
-0.0258029
-0.158542
+0.20
+0.20
+0.20
+0.20
+0.20
 
 # no generation models, no weight-generation section
 
 # word penalty
 [weight-w]
--0.0937304
+-1
 
 [distortion-limit]
 6
-
-[stack]
-200
-
-[v]
-0
-
-[threads]
-12
-
-[beam-threshold]
-0.3
