Add ted model generator

--- a/config/moses_ted_3g.ini
+++ b/config/moses_ted_3g.ini
@@ -15,7 +15,7 @@
 # OLD FORMAT translation tables: source-factors, target-factors, number of scores, file 
 # OLD FORMAT a binary table type (1) is assumed 
 [ttable-file]
-0 0 0 5 Model/phrase-table.gz
+0 0 0 5 Model/model/phrase-table.gz
 
 # no generation models, no generation-file section
 
@@ -31,7 +31,7 @@
 
 # distortion (reordering) files
 [distortion-file]
-0-0 wbe-msd-bidirectional-fe-allff 6 Model/reordering-table.wbe-msd-bidirectional-fe.gz
+0-0 wbe-msd-bidirectional-fe-allff 6 Model/model/reordering-table.wbe-msd-bidirectional-fe.gz
 
 # distortion (reordering) weight
 [weight-d]
